--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -199,7 +199,7 @@ map ctrl+g launch --location=split --cwd=current lazygit
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="PragmataPro Mono Liga"
+font_family      family="JetBrains Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
